# react-native-wechat-lib

./: .gitignore  License  README.md  package-lock.json  package.json
example/: App.tsx  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/harmony/: build-profile.template.json5
example/harmony/entry/: oh-package.json5
example/harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
example/harmony/entry/src/main/ets/: RNPackagesFactory.ts
example/harmony/entry/src/main/ets/entryability/: EntryAbility.ets
example/harmony/react_native_wechat_lib/: index.ets  oh-package.json5  ts.ets  ts.ts
example/harmony/react_native_wechat_lib/src/main/: module.json5
example/harmony/react_native_wechat_lib/src/main/cpp/: CMakeLists.txt
example/harmony/react_native_wechat_lib/src/main/ets/: WechatLibPackage.ts  WechatLibTurboModule.ets  WechatLibTurboModule.ts
example/harmony/react_native_wechat_lib/src/main/ets/model/: WXApiWrap.ets
example/src/: constants.ts
react-native-wechat-lib/: package-lock.json  package.json
react-native-wechat-lib/src/: index.ts
react-native-wechat-lib/src/specs/: NativeRNWechatLibModule.ts
src/: index.ts
src/specs/: NativeRNWechatLibModule.ts
tester/: App.tsx  package.json
tester/android/: build.gradle
tester/android/app/src/main/res/values/: strings.xml
tester/harmony/: oh-package.json5
tester/harmony/entry/: oh-package.json5
tester/harmony/entry/src/main/: module.json5
tester/harmony/react_native_wechat_lib/: index.ets
tester/harmony/react_native_wechat_lib/src/main/ets/: WechatLibTurboModule.ts
tester/harmony/react_native_wechat_lib/src/ohosTest/: module.json5
(+2 files in other folders)
